--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ body {
 /* Header */
 .header {
 	background-color: #fff;
+	position: fixed;
+	top: 0;
 }
 
 .header-inner {
 	display: flex;
 	justify-content: space-between;
 	padding: 15px 0;
-	position: sticky;
 }
 
 .header-inner i {
@@ -39,12 +40,14 @@ body {
 .header-inner a {
 	align-items: center;
 	background-color: #74cfae;
+	box-sizing: border-box;
 	color: #fff;
 	display: flex;
 	font-size: 12px;
 	justify-content: center;
 	padding: 14px 12px;
 	text-decoration: none;
+	transition-duration: .3s;
 }
 
 .header-inner a:hover {
@@ -66,12 +69,12 @@ body {
 	color: #74cfae;
 	font-size: 90px;
 	font-weight: 700;
-	margin-bottom: 20px;
 }
 
 .title-inner p {
 	color: #c0c0c0;
 	font-size: 30px;
+	margin-top: 20px;
 }
 
 /* ------------------------- */
@@ -82,39 +85,46 @@ body {
 .content-inner {
 	background-color: #74cfae;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	padding-top: 50px;
+}
+
+.content__img img{
+	vertical-align: bottom;
 }
 
 .content__text {
 	color: #fff;
-	margin-left: 200px;
+	margin-left: 50px;
 	text-align: center;
+	width: 680px;
 }
 
 .content__text h1 {
 	font-size: 24px;
-	margin-bottom: 35px;
 }
 
 .content__text p {
 	font-size: 20px;
 	line-height: 1.5;
+	margin-top: 35px;
 }
 
 /* ------------------------- */
 .works .page-title {
-	margin: 60px auto 40px auto;
+	padding-top: 60px;
 }
 
 .works__img {
 	display: flex;
 	flex-wrap: wrap;
+	margin-top: 40px;
 }
 
 .works__img img {
 	margin: 0 100px 80px 0;
 	opacity: 0.7;
+	transition-duration: .3s;
 }
 
 .works__img img:hover {
@@ -136,8 +146,8 @@ body {
 	display: flex;
 	justify-content: center;
 	line-height: 1.5;
-	padding-top: 90px;
-	padding-bottom: 90px;
+	margin-top: 90px;
+	padding-bottom: 70px;
 	width: 1100px;
 }
 
@@ -170,13 +180,14 @@ body {
 }
 
 .skills .page-title {
-	padding: 70px 0;
+	padding-top: 70px;
 }
 
 .skills__content {
 	display: flex;
 	font-size: 16px;
 	justify-content: center;
+	margin-top: 70px;
 	padding-bottom: 100px;
 }
 
@@ -192,7 +203,6 @@ body {
 	padding-top: 20px;
 }
 
-
 /* ------------------------- */
 .sns-inner {
 	align-items: center;
@@ -201,6 +211,7 @@ body {
 }
 
 .sns-inner i {
+	box-sizing: border-box;
 	color: #74cfae;
 	font-size: 60px;
 	margin-top: 200px;
@@ -225,10 +236,3 @@ body {
 	padding-top: 20px;
 	padding-bottom: 25px;
 }
-
-
-
-
-
-
-
